objects/ssot__CareRequestDiagnosisIdentifier__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareRequestDiagnosisId__c</fullName>
        <label>Care Request Diagnosis</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDateTime__c</fullName>
        <label>Effective End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Request Diagnosis Identifier Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentifierKeyText__c</fullName>
        <label>Identifier Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentifierTypeCodeId__c</fullName>
        <label>Identifier Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentifierTypeCodeObject__c</fullName>
        <label>Identifier Type Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentifierUsageType__c</fullName>
        <label>Identifier Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentifierValueText__c</fullName>
        <label>Identifier Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingAuthorityId__c</fullName>
        <label>IssuingAuthority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726236499_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosisIdentifier_Ident_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosisIdentifier_Ident_rel</relationshipLabel>
        <relationshipName>rel_1716726236499_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726237688_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosisIdentifier_Ident_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosisIdentifier_Ident_rel</relationshipLabel>
        <relationshipName>rel_1716726237688_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726240129_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosisIdentifier_Issui_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosisIdentifier_Issui_rel</relationshipLabel>
        <relationshipName>rel_1716726240129_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>